fixed position of fullscreen collapse button

--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -41,11 +41,11 @@
 .replay, .slomo {
     display: none !important;
 }
-.video-react-icon-fullscreen {
+
+.video-react-icon-fullscreen,  .video-react-icon-fullscreen-exit
     position: absolute !important;
     right: 0;
     bottom: -10px;
-}
 
 
 // Video Duration Numbers
